Breathe: Prevent dropdown action menu from overlapping its toggle on handbook pages.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13490 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -1620,6 +1620,7 @@ h2.toc-heading + h3.toc-heading:target {
 .post-type-archive-handbook nav.o2-post-actions ul,
 .single-handbook nav.o2-post-actions ul {
 	margin-right: 16.8px;
+	top: 9px;
 }
 
 @media (max-width: 550px) {
